--- a/package.json
+++ b/package.json
@@ -224,8 +224,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd client && npm run build",
-    "install": "cd client && npm install",
+    "build": "cd Client && npm run build",
+    "install": "cd Client && npm install",
     "start": "node app.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "nodemon":"nodemon app.js"
